iphone overflow fix?

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ li {
   background-attachment: fixed;
   padding:0;
   cursor: help;
+  overflow: hidden;
 }
 
 .prompt-inner {
